--- a/junithelper/build.properties
+++ b/junithelper/build.properties
@@ -1,4 +1,15 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin.xml,\
+               lib/,\
+               build.properties,\
+               src/,\
+               .settings/,\
+               .classpath,\
+               .project,\
+               bin/
+jars.compile.order = .,\
+                     lib/commons-httpclient-3.1.jar
+source.lib/commons-httpclient-3.1.jar = 
