--- a/junithelper/build.properties
+++ b/junithelper/build.properties
@@ -1,15 +1,6 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
+bin.includes = plugin.xml,\
+               META-INF/,\
                .,\
-               plugin.xml,\
-               lib/,\
-               build.properties,\
-               src/,\
-               .settings/,\
-               .classpath,\
-               .project,\
-               bin/
-jars.compile.order = .,\
-                     lib/commons-httpclient-3.1.jar
-source.lib/commons-httpclient-3.1.jar = 
+               lib/
