modified for 0.0.18(changed copyright, about.html, some feature info)

--- a/junithelper/about.ini
+++ b/junithelper/about.ini
@@ -7,7 +7,15 @@
 appName=JUnit Helper
 
 # Property "aboutText" contains blurb for "About" dialog (translated)
-aboutText=%blurb
+aboutText=JUnit Helper\n\
+\n\
+JUnit Helper makes your JUnit testing more agile.\n\
+Visit http://junithelper.org/\n\
+\n\
+Copyright (c) 2009 - junithelper.org. All rights reserved.\n\
+\n\
+This offering is based on technology from the Eclipse Project.\n\
+Visit http://www.eclipse.org
 
 # Property "featureImage" contains path to feature image (32x32)
 featureImage=icon/junithelper.png
