--- a/junithelper/build.properties
+++ b/junithelper/build.properties
@@ -5,5 +5,7 @@ bin.includes = plugin.xml,\
                .,\
                about.html,\
                about.ini,\
-               icon/
+               icon/,\
+               lib/,\
+               lib/juniversalchardet-1.0.3.jar
 
