--- a/junithelper-feature/.project
+++ b/junithelper-feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>feedviewer_feature</name>
+	<name>junithelper_feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
