--- a/junithelper-runtime/pom.xml
+++ b/junithelper-runtime/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>junithelper-runtime</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
-	<description>junithelper-runtime libraries</description>
+	<description>JUnitHelper Runtime Libraries</description>
 
 	<url>http://junithelper.org/</url>
 	<inceptionYear>2009</inceptionYear>
@@ -81,7 +81,6 @@
 		</dependency>
 	</dependencies>
 
-
 	<build>
 		<plugins>
 			<plugin>
@@ -133,7 +132,11 @@
 					<quiet>true</quiet>
 					<locales>ja</locales>
 					<encoding>UTF-8</encoding>
-					<bottom><![CDATA[]]></bottom>
+					<bottom>
+		            <![CDATA[
+		            Copyright &copy; Kazuhiro Sera. All Rights Reserved.
+		            ]]>
+					</bottom>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -153,6 +156,13 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ftp</artifactId>
+				<version>1.0-alpha-6</version>
+			</extension>
+		</extensions>
 	</build>
 	<reporting>
 		<plugins>
@@ -164,15 +174,11 @@
 					<quiet>true</quiet>
 					<locales>ja</locales>
 					<encoding>UTF-8</encoding>
-					<bottom><![CDATA[]]></bottom>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jxr-maven-plugin</artifactId>
-				<configuration>
-					<inputEncoding>UTF-8</inputEncoding>
-					<outputEncoding>UTF-8</outputEncoding>
+					<bottom>
+		            <![CDATA[
+		            Copyright &copy; Kazuhiro Sera. All Rights Reserved.
+					]]>
+					</bottom>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -185,32 +191,8 @@
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>taglist-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<configuration>
-					<linkXref>true</linkXref>
-					<sourceEncoding>utf-8</sourceEncoding>
-					<minimumTokens>100</minimumTokens>
-					<targetJdk>1.6</targetJdk>
-				</configuration>
-			</plugin>
-			<plugin>  
-				<groupId>org.codehaus.mojo</groupId>  
-				<artifactId>findbugs-maven-plugin</artifactId>  
-				<configuration>  
-					<xmlOutput>true</xmlOutput>  
-					<effort>Max</effort>  
-				</configuration>  
-				<version>1.1.1</version>  
 			</plugin>
 		</plugins>
 	</reporting>
-	
 </project>
