Moved ConcurrentTest, modified some javadocs

--- a/junithelper-runtime/.project
+++ b/junithelper-runtime/.project
@@ -1,6 +1,6 @@
 <projectDescription>
   <name>junithelper-runtime</name>
-  <comment>junithelper-runtime libraries</comment>
+  <comment>JUnitHelper Runtime Libraries</comment>
   <projects/>
   <buildSpec>
     <buildCommand>
