--- a/junithelper/about.ini
+++ b/junithelper/about.ini
@@ -9,10 +9,10 @@ appName=JUnit Helper
 # Property "aboutText" contains blurb for "About" dialog (translated)
 aboutText=JUnit Helper\n\
 \n\
-JUnit Helper makes your JUnit testing more agile.\n\
+"JUnit Helper" is a project to reduce frustrations of Java unit-testing on Eclipse IDE by getting off the routine works when making test cases.\n\
 Visit http://junithelper.org/\n\
 \n\
-Copyright (c) 2009 - junithelper.org. All rights reserved.\n\
+Copyright (c) 2009, 2010 JUnit Helper project committers and others.  All rights reserved.\n\
 \n\
 This offering is based on technology from the Eclipse Project.\n\
 Visit http://www.eclipse.org
